--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=192.168.15.222
 DB_PORT=3306
-DB_DATABASE=xxs_fixture
-DB_USERNAME=root
-DB_PASSWORD=null
+DB_DATABASE=fixture
+DB_USERNAME=dev_fixture
+DB_PASSWORD=b.123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
@@ -18,8 +18,8 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_HOST=192.168.15.222
+REDIS_PASSWORD=ODkwMWM5OTI2ZjRmYTliNjhhZjkwMDk3NjI5ZDEyMTc=
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
