--- a/.env
+++ b/.env
@@ -21,6 +21,7 @@ QUEUE_DRIVER=sync
 REDIS_HOST=192.168.15.222
 REDIS_PASSWORD=ODkwMWM5OTI2ZjRmYTliNjhhZjkwMDk3NjI5ZDEyMTc=
 REDIS_PORT=6379
+REDIS_DATABASE=1
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
