--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "classmap": [
             "database/seeds",
             "database/factories",
-            "app/libraries/class/"
+            "app/libraries/class/",
+            "app/libraries/wx/"
         ],
         "files": [
             "app/libraries/function/helper.php"
