--- a/.env
+++ b/.env
@@ -36,5 +36,5 @@ PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
 
-JMESSAGE_APP_KEY="9f47e17df172c546f20ea1ac"
-JMESSAGE_MASECT_SECRET="25579024c8d2027265a549f6"
+JMESSAGE_APP_KEY=9f47e17df172c546f20ea1ac
+JMESSAGE_MASECT_SECRET=25579024c8d2027265a549f6
