--- a/.env.test
+++ b/.env.test
@@ -35,3 +35,5 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
+JMESSAGE_APP_KEY=2a9b2116a11cc994c74f8a86
+JMESSAGE_MASECT_SECRET=acb3c03beddad3680b9697a2
