--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:pvx/ExnSgEDQl5EU2Lyh1lIYKGLJ/5a+ksosacrH9i4=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
@@ -24,11 +24,13 @@ REDIS_PORT=6379
 REDIS_DATABASE=1
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.qq.com
+MAIL_PORT=465
+MAIL_USERNAME=1161110682@qq.com
+MAIL_PASSWORD=kvybmpecycrhheeb
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=1161110682@qq.com
+MAIL_FROM_NAME=云易装
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
