--- a/.env.dev
+++ b/.env.dev
@@ -12,6 +12,13 @@ DB_DATABASE=fixture
 DB_USERNAME=dev_fixture
 DB_PASSWORD=b.123
 
+DB_CONNECTION_ADM=mysql
+DB_HOST_ADM=192.168.15.222
+DB_PORT_ADM=3306
+DB_DATABASE_ADM=fixture_admin
+DB_USERNAME_ADM=dev_fixture
+DB_PASSWORD_ADM=b.123
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
 SESSION_DRIVER=file
@@ -24,11 +31,13 @@ REDIS_PORT=6379
 REDIS_DATABASE=1
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.qq.com
+MAIL_PORT=465
+MAIL_USERNAME=1161110682@qq.com
+MAIL_PASSWORD=kvybmpecycrhheeb
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=1161110682@qq.com
+MAIL_FROM_NAME=云易装
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
